# simple-url-storage-challenge-revitalyze

./: .gitignore  Procfile  manage.py  pyproject.toml
urlstorage/config/: asgi.py  urls.py  wsgi.py
urlstorage/config/settings/: base.py  heroku.py
urlstorage/storage/: models.py  urls.py  views.py
urlstorage/storage/migrations/: 0001_initial.py  0002_alter_url_user.py  0003_alter_url_user.py
urlstorage/storage/templates/: base.html
urlstorage/storage/templates/storage/: url_add.html  url_list.html
urlstorage/users/: urls.py
urlstorage/users/templates/users/: login.html
