[tool.poetry]
name = "revitalyze.io_url_storage"
version = "0.1.0"
description = "Store user's URLs"
authors = ["Ivan Omelchenko <zver2010-3@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
django-bootstrap5 = "^22.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
